--- a/ind.html
+++ b/ind.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>This is my homework</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati natus nulla placeat, alias numquam ab, dolor eligendi recusandae magni modi voluptatem officia animi minus libero pariatur, sapiente consequuntur unde voluptatum.</p>
+
 </body>
 </html>
